<resources>
    <string name="app_name">Trắc Nghiệm Toán, Văn, Anh</string>
    <string name="info_user_default">Trần Văn Vững</string>
    <string name="home_nav">Trang Chủ</string>
    <string name="manager_question_nav">Quản Lý Câu Hỏi</string>
    <string name="history_nav">Quản Lý Lịch Sử</string>
    <string name="manager_account_nav">Quản Lý Tài Khoản</string>
    <string name="account_nav">Tài Khoản</string>
    <string name="manager_nav">Quản Lý</string>
    <string name="change_pass_nav">Đổi Mật Khẩu</string>
    <string name="my_profile_nav">Thông Tin Tài Khoản</string>
    <string name="login">Đăng nhập</string>
    <string name="sign_up">Đăng ký</string>
    <string name="nav_logout">Đăng xuất</string>
    <string name="user_name">Tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="password_old">Mật khẩu cũ</string>
    <string name="password_new">Mật khẩu mới</string>
    <string name="confirm_password_new">Nhập lại mật khẩu mới</string>
    <string name="donot_have_an_account">Bạn chưa có tài khoản?</string>
    <string name="have_an_account">Bạn đã có tài khoản?</string>

    <string name="test">Kiểm tra</string>
    <string name="view_mark">Xem điểm</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="end">Kết quả</string>

    <string name="correct_question">Câu đúng</string>
    <string name="wrong_question">Câu sai</string>
    <string name="unanswered_question">Câu chưa trả lời</string>
    <string name="total_mark">Tổng điểm</string>

    <string name="comeback">Quay lại</string>
    <string name="exit">Thoát</string>
    <string name="cancel">Đóng</string>

    <string name="exam_no">Đề số</string>
    <string name="question_no">Câu</string>
    <string name="list_of_answers">Danh sách câu trả lời</string>

    <string name="notification">Thông báo</string>
    <string name="notification_end_test">Bạn có chắc chắn muốn kết thúc bài thi hay không?</string>
    <string name="notification_exit">Bạn có muốn thoát hay không?</string>
    <string name="notification_logout">Bạn có muốn đăng xuất hay không?</string>
    <string name="notification_confirm_delete">Bạn có muốn xóa hay không?</string>
    <string name="notification_confirm_test">Bạn có muốn bắt đầu làm bài ngay bây giờ không?</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>

    <string name="question_no_default">Câu 1</string>
    <string name="question_content_default">Câu hỏi thứ nhất</string>
    <string name="question_ansA_default">Trả lời A</string>
    <string name="question_ansB_default">Trả lời B</string>
    <string name="question_ansC_default">Trả lời C</string>
    <string name="question_ansD_default">Trả lời D</string>

    <string name="field_can_not_empty">Trường không được để trống</string>
    <string name="field_max_length">Trường có độ tối đa là</string>
    <string name="field_min_length">Trường có độ tối thiểu là</string>
    <string name="email_not_valid">Vui lòng nhập một địa chỉ email hợp lệ</string>
    <string name="password_too_weak">Mật khẩu quá yếu</string>
    <string name="confirm_password_is_correct">Nhập lại mật khẩu không trùng khớp</string>
    <string name="confirm_password_new_is_correct">Nhập lại mật khẩu mới không trùng khớp</string>

    <string name="password_not_correct">Mật khẩu không chính xác</string>
    <string name="password_old_not_correct">Mật khẩu cũ không chính xác</string>
    <string name="username_not_exist">Tài khoản không tồn tại</string>
    <string name="username_exist">Tài khoản đã tồn tại</string>
    <string name="email_exist">Email đã tồn tại</string>
    <string name="login_success">Đăng nhập thành công</string>
    <string name="server_error">Lỗi server</string>

    <string name="navigation_drawer_open">navigation drawer open</string>
    <string name="navigation_drawer_close">navigation drawer close</string>

    <string name="name_of_user">Tên người dùng</string>
    <string name="confirm_password">Nhập lại mật khẩu</string>
    <string name="email">Email</string>
    <string name="address">Địa chỉ</string>
    <string name="sex">Giới tính</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="success">Thành công</string>
    <string name="error">Thất bại</string>
    <string name="edit">Cập Nhật</string>
    <string name="delete">Xóa</string>
    <string name="add_account">Thêm mới tài khoản</string>
    <string name="edit_account">Cập nhật tài khoản</string>
    <string name="acc_name_of_user">Tên:</string>
    <string name="acc_user_name">Tài khoản:</string>
    <string name="acc_email">Email:</string>
    <string name="acc_address">Địa chỉ:</string>
    <string name="acc_sex">Giới tính:</string>
    <string name="acc_type">Loại tài khoản:</string>
    <string name="acc_type_admin">Quản trị</string>
    <string name="acc_type_member">Thành viên</string>
    <string name="delete_acc_admin_error">Không thể xóa tài khoản admin mặc định</string>
    <string name="delete_acc_logged_error">Không thể xóa tài khoản đang đăng nhập</string>
    <string name="add">Thêm mới</string>
    <string name="image">Ảnh</string>
    <string name="upload_image_false">Upload ảnh thất bại</string>
    <string name="please_wait">Đang xử lý...</string>
    <string name="no_data">Không có dữ liệu</string>
    <string name="category_exam_name">Môn:</string>
    <string name="question_name">Câu hỏi:</string>
    <string name="add_question">Thêm mới câu hỏi</string>
    <string name="edit_question">Cập nhật câu hỏi</string>
    <string name="status">Trạng thái:</string>
    <string name="status_tested">Đã thi</string>
    <string name="status_not_tested">Chưa thi</string>
    <string name="user_name_create">Tên người tạo:</string>
    <string name="total_mark_of_history">Tổng điểm:</string>
    <string name="code">Mã lịch sử thi:</string>
    <string name="name_question">Tên câu hỏi</string>
    <string name="content_answerA">Nội dung đáp án A</string>
    <string name="content_answerB">Nội dung đáp án B</string>
    <string name="content_answerC">Nội dung đáp án C</string>
    <string name="content_answerD">Nội dung đáp án D</string>
    <string name="answer_correct">Đáp án đúng</string>
    <string name="question_category">Môn</string>
    <string name="math_nav">Toán</string>
    <string name="english_nav">Anh</string>
    <string name="literature_nav">Văn</string>
    <string name="password_new_must_be_other_password_old">Mật khẩu mới phải khác mật khẩu cũ</string>
    <string name="search">Tìm kiếm</string>
    <string name="only_admin_account_can_be_updated">Chỉ có tài khoản admin mới được cập nhật</string>
    <string name="forgot_pass">Quên mật khẩu?</string>
    <string name="opt_code">Mã xác minh của bạn là:</string>
    <string name="opt_send">Gửi mã ngay</string>
    <string name="email_not_exit">Email không tồn tại</string>
    <string name="We_will_send_otp">Chúng tôi sẽ gửi cho bạn mã otp đến địa chỉ email này để xác thực cho việc đổi mật khẩu</string>
    <string name="otp_verification">Xác minh OTP</string>
    <string name="otp_check">Vui lòng kiểm tra và nhập mã xác minh được gửi trong hộp thư email</string>
    <string name="verification">Xác minh</string>
    <string name="verification_fail">Mã xác minh không chính xác. Vui lòng kiểm tra lại</string>
    <string name="verification_enter_max_fail">Bạn đã nhập mã sai quá</string>
    <string name="times">lần.</string>

</resources>