<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home_nav"
            android:icon="@drawable/ic_home"
            />
        <item
            android:id="@+id/nav_math"
            android:title="@string/math_nav"
            android:icon="@drawable/ic_favorite"
            />
        <item
            android:id="@+id/nav_history"
            android:title="@string/history_nav"
            android:icon="@drawable/ic_history"
            />
    </group>
    <item android:title="@string/account_nav">
        <menu>
            <item
                android:id="@+id/nav_my_profile"
                android:title="@string/my_profile_nav"
                android:icon="@drawable/ic_person"
                />
            <item
                android:id="@+id/nav_change_pass"
                android:title="@string/change_pass_nav"
                android:icon="@drawable/ic_lock"
                />

        </menu>
    </item>

</menu>