<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fcfac1"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="22sp"
                    android:textColor="#ff0011"
                    android:textStyle="bold"
                    android:text="@string/question_no_default" />

                <TextView
                    android:id="@+id/tvQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="#000000"
                    android:textStyle="italic"
                    android:text="@string/question_content_default" />
            </LinearLayout>

            <ImageView
                android:id="@+id/ivIcon"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="0dp"
                android:padding="0dp"
                android:layout_gravity="center"
                android:visibility="gone" />

            <RadioGroup
                android:id="@+id/radGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp">

                <RadioButton
                    android:id="@+id/radA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:textSize="16sp"
                    android:textColor="#1502c7"
                    android:textStyle="bold"
                    android:text="@string/question_ansA_default" />

                <RadioButton
                    android:id="@+id/radB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:textSize="16sp"
                    android:textColor="#1502c7"
                    android:textStyle="bold"
                    android:text="@string/question_ansB_default" />

                <RadioButton
                    android:id="@+id/radC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:textSize="16sp"
                    android:textColor="#1502c7"
                    android:textStyle="bold"
                    android:text="@string/question_ansC_default" />

                <RadioButton
                    android:id="@+id/radD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:textSize="16sp"
                    android:textColor="#1502c7"
                    android:textStyle="bold"
                    android:text="@string/question_ansD_default" />
            </RadioGroup>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
